--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "evas-php/evas-validate",
     "description": "Validation module (Field, Fieldset, Inner fieldsets, json fieldsets validators and html quote support)",
+    "keywords": ["validation", "validator", "validate", "evas-php"],
     "version": "1.0",
-    "minimum-stability": "dev",
     "type": "library",
     "license": "CC-BY-4.0",
     "authors": [
